--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -31,7 +31,14 @@
               <input type="checkbox" />Remember Me
             </div>
             <div class="form-group text-center mt-2">
-              <input (click)="onSubmit()" value="Login" class="btn login_btn" />
+              <!--<input (click)="onSubmit()" value="Login" class="btn login_btn" />-->
+              <button *ngIf="!submitting" (click)="onSubmit()" class="btn login_btn">Login</button>
+              <div *ngIf="submitting" class="lds-ring">
+                <div></div>
+                <div></div>
+                <div></div>
+                <div></div>
+              </div>
             </div>
           </form>
         </div>
