--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -44,10 +44,12 @@
         </div>
         <div class="card-footer">
           <div class="d-flex justify-content-center links">
-            Don't have an account?<a [routerLink]="['/register']">Register</a>
+            Don't have an account?<a [routerLink]="['/register']">
+              <div class="reg">Register</div>
+            </a>
           </div>
           <div class="d-flex justify-content-center">
-            <a href="#">Create by Weerayut</a>
+            <div class="red">Create by SUMET</div>
           </div>
         </div>
       </div>
