--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -75,10 +75,12 @@
         </div>
         <div class="card-footer">
           <div class="d-flex justify-content-center links">
-            Have an account?<a [routerLink]="['/login']">Login</a>
+            Have an account?<a [routerLink]="['/login']">
+              <div class="gem">Login</div>
+            </a>
           </div>
           <div class="d-flex justify-content-center">
-            <a href="#">Create by Weerayut</a>
+            <div class="req">Create by SUMET</div>
           </div>
         </div>
       </div>
