--- a/src/app/register/register.component.scss
+++ b/src/app/register/register.component.scss
@@ -1,6 +1,6 @@
 /* Made with love by Mutiullah Samim*/
 
-@import url('https://fonts.googleapis.com/css?family=Numans');
+@import url("https://fonts.googleapis.com/css?family=Numans");
 
 html,
 body {
@@ -8,7 +8,7 @@ body {
   //   background-size: cover;
   //   background-repeat: no-repeat;
   height: 100%;
-  font-family: 'Numans', sans-serif;
+  font-family: "Numans", sans-serif;
 }
 
 .logo-container {
@@ -25,7 +25,7 @@ body {
 .container-fluid {
   //   height: 100%;
   //   background-image: url('http://getwallpapers.com/wallpaper/full/a/5/d/544750.jpg');
-  background-image: url('../../assets/classroom.jpg');
+  background-image: url("../../assets/game4.jpg");
   background-size: cover;
   background-repeat: no-repeat;
   align-content: center;
@@ -36,13 +36,13 @@ body {
   margin-bottom: 30px;
   width: 400px;
   //   background-color: rgba(0, 0, 0, 0.5) !important;
-  background-color: rgba(76, 11, 11, 0.88) !important;
+  background-color: rgba(255, 145, 0, 0.88) !important;
 }
 
 .social_icon span {
   font-size: 60px;
   margin-left: 10px;
-  color: #32f9dd;
+  color: #fbff02;
 }
 
 .social_icon span:hover {
@@ -70,7 +70,6 @@ body {
 input:focus {
   outline: 0 0 0 0 !important;
   box-shadow: 0 0 0 0 !important;
-
 }
 
 .remember {
@@ -86,7 +85,7 @@ input:focus {
 
 .login_btn {
   color: black;
-  background-color: #FFC312;
+  background-color: rgb(251, 255, 0);
   width: 100px;
   cursor: pointer;
 }
@@ -126,6 +125,14 @@ input:focus {
 
 .lds-ring div:nth-child(1) {
   animation-delay: -0.45s;
+}
+
+.req {
+  color: rgb(5, 30, 253);
+}
+
+.gem {
+  color: rgb(5, 30, 253);
 }
 
 .lds-ring div:nth-child(2) {
